# virtual-led-matrix

./: README.md  pyproject.toml
docs/: notes.md
examples/: README.md  binary-clock.py  digital-clock.py  display-message.py  led-walker.py  message.py  pixel-walker.py  program-walker.py  random-dots-1.py  random-dots-2.py  random-dots-3.py  random-dots.py  random-leds-1.py  random-leds-2.py  random-leds-3.py  random-lines.py
led_matrix/: glyph.py  led_matrix.py  program.py  version.py
led_matrix/glyphs/: alpha_num.py
pixel_matrix/: color.py  pixel_matrix.py  program.py  version.py
