[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virtual-led-matrix"
readme = "README.md"
dynamic = ["version"]
dependencies = ["pygame ~= 2.6"]

[tool.hatch.version]
path = "led_matrix/version.py"

[tool.hatch.build.targets.sdist]
exclude = ["/docs"]

[tool.hatch.build.targets.wheel]
packages = ["led_matrix"]
